--- a/_posts/2018-7-10-numerai.md
+++ b/_posts/2018-7-10-numerai.md
@@ -12,7 +12,7 @@ Submissions measured on three metrics: logarithmic loss, consistency (across era
 - Consistency is a measure developed by Numerai to assess how well your model performs across eras. They are looking for models that perform consistently well across all eras in the test set. Numerai will reject your submission if this comes back below 58%. 
 - Finally, concordance is an assessment that the same model has made predictions for each data set. You are provided the targets for the validation set, but this is what is displayed in the public leaderboard as well, so someone could just copy these and appear to publicly have the best model. Numerai keeps the predictions on the test set to internally assess the performance of the model and determine how to weight it for their investments. The live dataset is used for making investments and determining the eventual payout (at which time it becomes public).
 
-I found this project to be incredibly challenging and I am happy that I was able to try new approaches and techniques that I previously hadn't had experience with before, including dealing with large datasets, create feature engineering, principal component analysis, and model ensembling with multiple underlying models. 
+I found this project to be incredibly challenging and I am happy that I was able to try new approaches and techniques that I previously hadn't had experience with before, including dealing with large datasets, creative feature engineering, principal component analysis, and model ensembling with multiple underlying models. 
 
 Below, I've detailed my approach including EDA, feature engineering, selection, and extraction, modeling, results, and predictions. For reference, this analysis is for the Bernie #115 competition. Please let me know if you have any questions. You can reach me at joedorfman@gmail.com. I would love to hear from you!
 
